# roboplan

./: .clang-format-ignore  .clangd  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  docker-compose.yaml  pixi.toml
.docker/: Dockerfile  entrypoint.sh
.docker/ros/: Dockerfile
.docker/ubuntu/: Dockerfile  entrypoint.sh
.github/workflows/: benchmarks.yml  build_and_test.yml
benchmarks/: test_benchmark_rrt.py
bindings/: CMakeLists.txt  README.md  package.xml  pyproject.toml
bindings/examples/: common.py  example_dual_arm.py  example_ik.py  example_path_shortcutting.py  example_rrt.py  example_rrt_franka.py  example_rrt_ur.py  example_scene.py  test_ik.py  utils.py
bindings/include/modules/: core.hpp  example_models.hpp  rrt.hpp  simple_ik.hpp  toppra.hpp
bindings/include/utils/: expected.hpp
bindings/src/: roboplan_ext.cpp
bindings/src/modules/: core.cpp  example_models.cpp  rrt.cpp  simple_ik.cpp  toppra.cpp
bindings/src/roboplan/: __init__.py  utils.py  viser_visualizer-old.py  viser_visualizer.py  visualization.py
bindings/src/roboplan/roboplan_ext/: __init__.pyi  core.pyi  example_models.pyi  rrt.pyi  simple_ik.pyi  toppra.pyi
bindings/test/: test_import.py  test_rrt.py  test_scene.py
docs/: python_docs_requirements.txt
docs/source/: api.rst  api_cpp.rst  api_py.rst  conf.py  design.rst  getting_started.rst  index.rst  setup.rst
include/roboplan/: utils.hpp
roboplan/: CMakeLists.txt  package.xml
roboplan/cmake/: roboplanConfig.cmake.in
roboplan/include/roboplan/core/: geometry_wrappers.hpp  path_utils.hpp  scene.hpp  scene_utils.hpp  types.hpp
roboplan/include/tinyxml2/: README.md
roboplan/src/core/: path_utils.cpp  scene.cpp  scene_utils.cpp  types.cpp
roboplan/test/: CMakeLists.txt  test_joints.cpp  test_path_utils.cpp  test_scene.cpp
roboplan_example_models/: CMakeLists.txt  package.xml
roboplan_example_models/include/roboplan_example_models/: resources.hpp
roboplan_example_models/models/franka_robot_model/: dual_fr3.srdf  dual_fr3.urdf  dual_fr3_config.yaml
roboplan_example_models/models/kinova_robot_model/: kinova_robotiq.urdf
roboplan_example_models/models/ur_robot_model/: ur5_gripper.srdf
roboplan_example_models/src/: resources.cpp
roboplan_examples/: CMakeLists.txt  package.xml
roboplan_examples/cpp/: CMakeLists.txt  example_ik.cpp  example_rrt.cpp  example_scene.cpp
roboplan_examples/example_resources/: CMakeLists.txt  package.xml
roboplan_examples/example_resources/include/example_resources/: example_resources.hpp
roboplan_examples/example_resources/src/: example_resources.cpp
roboplan_examples/example_resources/ur_robot_model/: ur5_gripper.urdf
roboplan_examples/examples/: CMakeLists.txt  example_ik.cpp  example_resources.hpp  example_scene.cpp  package.xml  resources.hpp.in  test_ik.cpp  test_scene.cpp
roboplan_examples/examples/examples/: test_ik.cpp  test_scene.cpp
roboplan_examples/python/: CMakeLists.txt  common.py  example_dual_arm.py  example_ik.py  example_rrt.py  example_scene.py
roboplan_rrt/: CMakeLists.txt  package.xml
roboplan_rrt/include/dynotree/: StateSpace.h
roboplan_rrt/include/roboplan_rrt/: rrt.hpp
roboplan_rrt/src/: rrt.cpp
roboplan_rrt/test/: CMakeLists.txt  test_rrt.cpp
roboplan_simple_ik/: CMakeLists.txt  package.xml
roboplan_simple_ik/include/roboplan_simple_ik/: simple_ik.hpp
roboplan_simple_ik/src/: simple_ik.cpp
roboplan_toppra/: CMakeLists.txt  package.xml
roboplan_toppra/cmake/: roboplan_toppraConfig.cmake.in
roboplan_toppra/include/roboplan_toppra/: toppra.hpp
roboplan_toppra/src/: toppra.cpp
roboplan_toppra/test/: CMakeLists.txt  test_toppra.cpp
scripts/: build_cmake.bash  run_tests.bash
src/: utils.cpp
